[package]
name = "auto_temp"
version = "0.1.0"
authors = ["Yuto Watanabe <yuto.w51942@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
criterion = "0.3.4"

[[bench]]
name = "bench"
harness = false
